- Change fizzbuzz view to use a recyclerview and textviews to improve performance

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -9,4 +9,5 @@
 	<string name="first_word_title">First word</string>
 	<string name="message_error_fill_multiple">The multiple must be different from zero</string>
 	<string name="message_error_fill_limit">The limit must be bigger than zero</string>
+	<string name="message_error_fill_limit_too_big">The limit is too big</string>
 </resources>
