--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -9,4 +9,5 @@
 	<string name="first_multiple_title">Premier multiple</string>
 	<string name="message_error_fill_multiple">Le multiple doit être plus grand que zéro</string>
 	<string name="message_error_fill_limit">La limite doit être plus grande que zéro</string>
+	<string name="message_error_fill_limit_too_big">La limite est trop élevée</string>
 </resources>
